# python-pro-dz-12

./: manage.py  pyproject.toml
posts/: views.py
pythonpro_dz_12/: asgi.py  settings.py  urls.py  wsgi.py
